NXP-29452: Fix new java 11 warnings