@@ -67,7 +67,7 @@ public class EventDispatcherDescriptor {
 
     public EventBundleDispatcher getInstance() {
         try {
-            return clazz.newInstance();
+            return clazz.getDeclaredConstructor().newInstance();
         } catch (ReflectiveOperationException e) {
             throw new RuntimeException(e);
         }
