@@ -82,7 +82,7 @@ public class TestAuditPageProviderWithElasticSearch {
 
     protected Map<String, ExtendedInfo> createExtendedInfos() {
         Map<String, ExtendedInfo> infos = new HashMap<String, ExtendedInfo>();
-        ExtendedInfo info = ExtendedInfoImpl.createExtendedInfo(new Long(1));
+        ExtendedInfo info = ExtendedInfoImpl.createExtendedInfo(Long.valueOf(1));
         infos.put("id", info);
         return infos;
     }
